Refactor XML node names and update test assertions for consistency