@@ -418,7 +418,7 @@ class VersionTest {
 	@Test
 	void testLocaleIndependent() {
 		Locale original = Locale.getDefault();
-		Locale[] locales = { Locale.ENGLISH, new Locale( "tr" ), Locale.getDefault() };
+		Locale[] locales = { Locale.ENGLISH, Locale.of( "tr" ), Locale.getDefault() };
 		try {
 			for( Locale locale : locales ) {
 				Locale.setDefault( locale );
